--- a/style..css
+++ b/style..css
@@ -121,3 +121,29 @@ form.intro-booking input{
     padding: 5px 0;
     border-right: 1px solid #ddd;
 }
+
+
+section.about{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-right: 20px;
+    margin-top: 120px;
+    gap: 50px;
+    position:relative;
+}
+section.about div.shadow-text{
+    top:-50px;
+    left:-50px;
+    z-index: 1;
+    white-space: nowrap;
+}
+section.about div:not(.shadow-text){
+    position:relative;
+    z-index: 3;
+}
+section.about p{
+    margin: 20px 0;
+    color:#555;
+    font-size: .8rem;
+    line-height: 1.3rem;
+}
