--- a/style..css
+++ b/style..css
@@ -1,149 +1,355 @@
-
-header{
-    padding: 20px;
+header {
+  padding: 20px;
 }
-header div.columns{
-    display: flex;
-    justify-content:space-between;
-    align-items:center;
+header div.columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-header nav a{
-    text-decoration: none;
-    color:#333;
-    margin-right: 20px;
-    position: relative;
+header nav a {
+  text-decoration: none;
+  color: #333;
+  margin-right: 20px;
+  position: relative;
 }
-header nav a span{
-    position: relative;
+header nav a span {
+  position: relative;
 }
-header nav a.active span:before{
-    content: '';
-    position: absolute;
-    left: 0;
-    right:0;
-    bottom:-2px;
-    border-bottom: 10px solid #46C6CB;
-    z-index: -1;
+header nav a.active span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  border-bottom: 10px solid #46c6cb;
+  z-index: -1;
 }
-.mobile-nav-btn{
-    display:none;
+.mobile-nav-btn {
+  display: none;
 }
-#navCb{
-    display:none;
-}
-
-
-section.intro{
-    display:grid;
-    grid-template-columns: 1.2fr 0.8fr;
-    padding: 0 20px;
-    position:relative;
-    gap: 50px;
+#navCb {
+  display: none;
 }
 
-section.intro .content-column{
-    padding-top: 25px;
-}
-section.intro h1{
-    color: #D8A9D8;
-    text-transform: uppercase;
-    font-size:3rem;
-}
-section.intro h2{
-    text-transform: uppercase;
-    font-size: 2.4rem;
-}
-section.intro p{
-    color: #666;
-    font-size:.8rem;
-    line-height: 1.3rem;
-    margin-top:20px;
-    margin-bottom: 30px;
-}
-.shadow-text{
-    position: absolute;
-    top:30px;
-    left:-30px;
-    color: rgba(0,0,0,.05);
-    font-size:7rem;
-    line-height:6rem;
-    z-index: -1;
-    font-weight: bold;
+section.intro {
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
+  padding: 0 20px;
+  position: relative;
+  gap: 50px;
 }
 
+section.intro .content-column {
+  padding-top: 25px;
+}
+section.intro h1 {
+  color: #d8a9d8;
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+section.intro h2 {
+  text-transform: uppercase;
+  font-size: 2.4rem;
+}
+section.intro p {
+  color: #666;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.shadow-text {
+  position: absolute;
+  top: 30px;
+  left: -30px;
+  color: rgba(0, 0, 0, 0.05);
+  font-size: 7rem;
+  line-height: 6rem;
+  z-index: -1;
+  font-weight: bold;
+}
 
-section.intro div.circle{
-    width: 700px;
-    height: 700px;
-    border-radius:50%;
-    background: linear-gradient(270deg, #ABB6E4 200px, #EFB6C5);
-    position: absolute;
-    top:-250px;
-    right:-350px;
-    z-index: -1;
+section.intro div.circle {
+  width: 700px;
+  height: 700px;
+  border-radius: 50%;
+  background: linear-gradient(270deg, #abb6e4 200px, #efb6c5);
+  position: absolute;
+  top: -250px;
+  right: -350px;
+  z-index: -1;
 }
-.intro-picture img{
-    width: 250px;
-    margin-top: 40px;
+.intro-picture img {
+  width: 250px;
+  margin-top: 40px;
 }
-.dots{
-    background: url('dot.png');
-    position: absolute;
-    z-index: -1;
-    right: -100px;
-    top: 60px;
-    opacity: 0.5;
-    width: 250px;
-    height: 180px;
+.dots {
+  background: url("dot.png");
+  position: absolute;
+  z-index: -1;
+  right: -100px;
+  top: 60px;
+  opacity: 0.5;
+  width: 250px;
+  height: 180px;
 }
 
-form.intro-booking{
-    display: grid;
-    position: relative;
-    top: -5px;
-    grid-template-columns: 50px 1fr 50px 1fr 50px 1fr 1fr;
+form.intro-booking {
+  display: grid;
+  position: relative;
+  top: -5px;
+  grid-template-columns: 50px 1fr 50px 1fr 50px 1fr 1fr;
+  background-color: #fff;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  margin: 0;
+  border-radius: 5px;
+  border: 3px solid #fff;
+}
+form.intro-booking div.icon {
+  text-align: center;
+}
+form.intro-booking svg {
+  height: 20px;
+}
+form.intro-booking input {
+  display: block;
+  border: 0;
+  padding: 5px 0;
+  border-right: 1px solid #ddd;
+}
+
+section.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-right: 20px;
+  margin-top: 120px;
+  gap: 50px;
+  position: relative;
+}
+section.about div.shadow-text {
+  top: -50px;
+  left: -50px;
+  z-index: 1;
+  white-space: nowrap;
+}
+section.about div:not(.shadow-text) {
+  position: relative;
+  z-index: 3;
+}
+section.about p {
+  margin: 20px 0;
+  color: #555;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+img {
+  max-width: 100%;
+}
+h2 {
+  font-size: 2rem;
+}
+.center {
+  max-width: 780px;
+  margin: 0 auto;
+  position: relative;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+}
+a.btn,
+button,
+.mobile-nav-btn {
+  background-color: #222;
+  color: #fff;
+  padding: 12px 25px;
+  border: 0;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+header {
+  padding: 20px;
+}
+header div.columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header nav a {
+  text-decoration: none;
+  color: #333;
+  margin-right: 20px;
+  position: relative;
+}
+header nav a span {
+  position: relative;
+}
+header nav a.active span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  border-bottom: 10px solid #46c6cb;
+  z-index: -1;
+}
+.mobile-nav-btn {
+  display: none;
+}
+#navCb {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  header {
+    padding: 0;
+  }
+  header div.columns {
     background-color: #fff;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    margin: 0;
-    border-radius:5px;
-    border: 3px solid #fff;
-}
-form.intro-booking div.icon{
-    text-align: center;
-}
-form.intro-booking svg{
-    height: 20px;
-}
-form.intro-booking input{
     display: block;
-    border:0;
-    padding: 5px 0;
-    border-right: 1px solid #ddd;
+    position: relative;
+    z-index: 10;
+    padding: 20px;
+  }
+  header nav a.active span:before {
+    bottom: -2px;
+    border-bottom-width: 15px;
+  }
+  header nav a {
+    display: block;
+    font-size: 2rem;
+  }
+  .mobile-nav-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    display: inline-block;
+    transform: rotate(90deg);
+    padding: 20px;
+    z-index: 15;
+  }
+  #navCb:not(:checked) ~ div.columns {
+    display: block;
+  }
+  #navCb:checked ~ div.columns {
+    display: none;
+  }
 }
 
+section.intro {
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
+  padding: 0 20px;
+  position: relative;
+  gap: 50px;
+}
+@media screen and (max-width: 768px) {
+  section.intro {
+    grid-template-columns: 1fr;
+  }
+  .intro-picture {
+    display: none;
+  }
+}
+section.intro .content-column {
+  padding-top: 25px;
+}
+section.intro h1 {
+  color: #d8a9d8;
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+section.intro h2 {
+  text-transform: uppercase;
+  font-size: 2.4rem;
+}
+section.intro p {
+  color: #666;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.shadow-text {
+  position: absolute;
+  top: 30px;
+  left: -30px;
+  color: rgba(0, 0, 0, 0.05);
+  font-size: 7rem;
+  line-height: 6rem;
+  z-index: -1;
+  font-weight: bold;
+}
 
-section.about{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-right: 20px;
-    margin-top: 120px;
-    gap: 50px;
-    position:relative;
+section.intro div.circle {
+  width: 700px;
+  height: 700px;
+  border-radius: 50%;
+  background: linear-gradient(270deg, #abb6e4 200px, #efb6c5);
+  position: absolute;
+  top: -250px;
+  right: -350px;
+  z-index: -1;
 }
-section.about div.shadow-text{
-    top:-50px;
-    left:-50px;
-    z-index: 1;
-    white-space: nowrap;
+.intro-picture img {
+  width: 250px;
+  margin-top: 40px;
 }
-section.about div:not(.shadow-text){
-    position:relative;
-    z-index: 3;
+.dots {
+  background: url("dot.png");
+  position: absolute;
+  z-index: -1;
+  right: -100px;
+  top: 60px;
+  opacity: 0.5;
+  width: 250px;
+  height: 180px;
 }
-section.about p{
-    margin: 20px 0;
-    color:#555;
-    font-size: .8rem;
-    line-height: 1.3rem;
+
+form.intro-booking {
+  display: grid;
+  position: relative;
+  top: -5px;
+  grid-template-columns: 50px 1fr 50px 1fr 50px 1fr 1fr;
+  background-color: #fff;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  margin: 0;
+  border-radius: 5px;
+  border: 3px solid #fff;
+}
+form.intro-booking div.icon {
+  text-align: center;
+}
+form.intro-booking svg {
+  height: 20px;
+}
+form.intro-booking input {
+  display: block;
+  border: 0;
+  padding: 5px 0;
+  border-right: 1px solid #ddd;
+}
+@media screen and (max-width: 768px) {
+  form.intro-booking {
+    margin: 40px 20px 0;
+    grid-template-columns: 50px 1fr 50px 1fr;
+  }
+  form.intro-booking input {
+    border-right: 0;
+    border-bottom: 1px solid #ddd;
+  }
+  form.intro-booking button {
+    grid-column: 4;
+    margin-top: 3px;
+  }
 }
