--- a/style..css
+++ b/style..css
@@ -353,3 +353,39 @@ form.intro-booking input {
     margin-top: 3px;
   }
 }
+
+
+section.about{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-right: 20px;
+    margin-top: 120px;
+    gap: 50px;
+    position:relative;
+}
+section.about div.shadow-text{
+    top:-50px;
+    left:-50px;
+    z-index: 1;
+    white-space: nowrap;
+}
+section.about div:not(.shadow-text){
+    position:relative;
+    z-index: 3;
+}
+section.about p{
+    margin: 20px 0;
+    color:#555;
+    font-size: .8rem;
+    line-height: 1.3rem;
+}
+@media screen and (max-width: 768px) {
+    section.about{
+        grid-template-columns:1fr;
+        padding: 0 20px;
+    }
+    section.about img{
+        display: none;
+    }
+}
+
