--- a/style..css
+++ b/style..css
@@ -424,3 +424,15 @@ section.services div.columns{
     font-size: .8rem;
     line-height: 1.2rem;
 }
+
+@media screen and (max-width: 768px) {
+    section.services img{
+        display: none;
+    }
+    section.services div.columns {
+        grid-template-columns: 1fr;
+    }
+    .service{
+        margin: 20px 0;
+    }
+}
