facilities section styling and responsiveness

--- a/style..css
+++ b/style..css
@@ -513,3 +513,48 @@ section.facilities div.shadow-text{
     top:-50px;
     left:20px;
 }
+
+
+section.facilities{
+    background: linear-gradient(90deg, #C2B0E0 60%, #7DD7D8);
+}
+section.facilities img{
+    border-top-right-radius: 120px;
+    border-bottom-right-radius: 120px;
+}
+section.facilities div.columns{
+    display: grid;
+    align-items: center;
+    grid-template-columns: max-content 1fr;
+}
+section.facilities div.content{
+    position: relative;
+    padding: 10px 60px;
+    color:#fff;
+}
+section.facilities p{
+    margin: 20px 0;
+    font-size: .8rem;
+}
+section.facilities div.shadow-text{
+    z-index: 1;
+    color: rgba(255,255,255,.1);
+    top:-50px;
+    left:20px;
+}
+@media screen and (max-width: 768px) {
+    section.facilities div.columns{
+        grid-template-columns: 1fr;
+        padding:20px;
+    }
+    section.facilities img{
+        border-radius: 120px;
+        box-sizing: border-box;
+        display: block;
+        width:100%;
+    }
+    section.facilities div.content{
+        padding: 20px 0;
+    }
+}
+
