--- a/style..css
+++ b/style..css
@@ -354,247 +354,290 @@ form.intro-booking input {
   }
 }
 
+section.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-right: 20px;
+  margin-top: 120px;
+  gap: 50px;
+  position: relative;
+}
+section.about div.shadow-text {
+  top: -50px;
+  left: -50px;
+  z-index: 1;
+  white-space: nowrap;
+}
+section.about div:not(.shadow-text) {
+  position: relative;
+  z-index: 3;
+}
+section.about p {
+  margin: 20px 0;
+  color: #555;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+}
+@media screen and (max-width: 768px) {
+  section.about {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+  section.about img {
+    display: none;
+  }
+}
 
-section.about{
-    display: grid;
+section.services {
+  background-color: #000;
+  color: #fff;
+  margin-top: 50px;
+  padding: 70px 20px 0;
+  position: relative;
+}
+section.services .shadow-text {
+  color: rgba(255, 255, 255, 0.1);
+  z-index: 1;
+  left: 0;
+  top: -50px;
+}
+section.services div.columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: flex-end;
+}
+.service {
+  margin: 50px 0;
+}
+.service .number {
+  font-size: 3rem;
+  font-weight: bold;
+  -webkit-text-stroke: 1px #fff;
+  color: #000;
+}
+.service h3 {
+  margin: 10px 0 10px;
+}
+.service p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+}
+
+@media screen and (max-width: 768px) {
+  section.services img {
+    display: none;
+  }
+  section.services div.columns {
+    grid-template-columns: 1fr;
+  }
+  .service {
+    margin: 20px 0;
+  }
+}
+
+section.classes {
+  position: relative;
+  padding: 70px 20px;
+}
+section.classes .shadow-text {
+  top: -50px;
+  left: -50px;
+  font-size: 5rem;
+}
+.classes-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+  margin-top: 30px;
+}
+.classes-grid .class {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+.classes-grid .class:after {
+  content: "→";
+  position: absolute;
+  font-size: 2rem;
+  right: 10px;
+  top: 50%;
+  margin-top: -1rem;
+  color: #45c3c8;
+}
+.class time {
+  display: block;
+  font-size: 0.8rem;
+  margin-top: 7px;
+}
+@media screen and (max-width: 768px) {
+  .classes-grid {
     grid-template-columns: 1fr 1fr;
-    padding-right: 20px;
-    margin-top: 120px;
-    gap: 50px;
-    position:relative;
+  }
+  .class time {
+    margin-right: 20px;
+  }
 }
-section.about div.shadow-text{
-    top:-50px;
-    left:-50px;
-    z-index: 1;
-    white-space: nowrap;
+
+section.facilities {
+  background: linear-gradient(90deg, #c2b0e0 60%, #7dd7d8);
 }
-section.about div:not(.shadow-text){
-    position:relative;
-    z-index: 3;
+section.facilities img {
+  border-top-right-radius: 120px;
+  border-bottom-right-radius: 120px;
 }
-section.about p{
-    margin: 20px 0;
-    color:#555;
-    font-size: .8rem;
-    line-height: 1.3rem;
+section.facilities div.columns {
+  display: grid;
+  align-items: center;
+  grid-template-columns: max-content 1fr;
+}
+section.facilities div.content {
+  position: relative;
+  padding: 10px 60px;
+  color: #fff;
+}
+section.facilities p {
+  margin: 20px 0;
+  font-size: 0.8rem;
+}
+section.facilities div.shadow-text {
+  z-index: 1;
+  color: rgba(255, 255, 255, 0.1);
+  top: -50px;
+  left: 20px;
+}
+
+section.facilities {
+  background: linear-gradient(90deg, #c2b0e0 60%, #7dd7d8);
+}
+section.facilities img {
+  border-top-right-radius: 120px;
+  border-bottom-right-radius: 120px;
+}
+section.facilities div.columns {
+  display: grid;
+  align-items: center;
+  grid-template-columns: max-content 1fr;
+}
+section.facilities div.content {
+  position: relative;
+  padding: 10px 60px;
+  color: #fff;
+}
+section.facilities p {
+  margin: 20px 0;
+  font-size: 0.8rem;
+}
+section.facilities div.shadow-text {
+  z-index: 1;
+  color: rgba(255, 255, 255, 0.1);
+  top: -50px;
+  left: 20px;
 }
 @media screen and (max-width: 768px) {
-    section.about{
-        grid-template-columns:1fr;
-        padding: 0 20px;
-    }
-    section.about img{
-        display: none;
-    }
-}
-
-section.services{
-    background-color:#000;
-    color:#fff;
-    margin-top: 50px;
-    padding: 70px 20px 0;
-    position: relative;
-}
-section.services .shadow-text{
-    color: rgba(255,255,255,.1);
-    z-index: 1;
-    left:0;
-    top: -50px;
-}
-section.services div.columns{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: flex-end;
-}
-.service{
-    margin: 50px 0;
-}
-.service .number{
-    font-size: 3rem;
-    font-weight: bold;
-    -webkit-text-stroke: 1px #fff;
-    color:#000;
-}
-.service h3{
-    margin: 10px 0 10px;
-}
-.service p{
-    color: rgba(255,255,255,.5);
-    font-size: .8rem;
-    line-height: 1.2rem;
-}
-
-@media screen and (max-width: 768px) {
-    section.services img{
-        display: none;
-    }
-    section.services div.columns {
-        grid-template-columns: 1fr;
-    }
-    .service{
-        margin: 20px 0;
-    }
-}
-
-
-section.classes{
-    position: relative;
-    padding: 70px 20px;
-}
-section.classes .shadow-text{
-    top:-50px;
-    left:-50px;
-    font-size:5rem;
-}
-.classes-grid{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 25px;
-    margin-top: 30px;
-}
-.classes-grid .class{
-    box-shadow: 0 0 3px rgba(0,0,0,.1);
+  section.facilities div.columns {
+    grid-template-columns: 1fr;
     padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    position:relative;
-    color:#000;
-    text-decoration: none;
-}
-.classes-grid .class:after{
-    content: '→';
-    position: absolute;
-    font-size: 2rem;
-    right:10px;
-    top: 50%;
-    margin-top: -1rem;
-    color:#45C3C8;
-}
-.class time{
-    display:block;
-    font-size: .8rem;
-    margin-top: 7px;
-}
-@media screen and (max-width: 768px) {
-    .classes-grid{
-        grid-template-columns:1fr 1fr;
-    }
-    .class time{
-        margin-right: 20px;
-    }
+  }
+  section.facilities img {
+    border-radius: 120px;
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+  }
+  section.facilities div.content {
+    padding: 20px 0;
+  }
 }
 
-
-section.facilities{
-    background: linear-gradient(90deg, #C2B0E0 60%, #7DD7D8);
+section.team {
+  padding: 80px 0 40px;
 }
-section.facilities img{
-    border-top-right-radius: 120px;
-    border-bottom-right-radius: 120px;
+section.team .shadow-text {
+  top: -50px;
+  left: -50px;
 }
-section.facilities div.columns{
-    display: grid;
-    align-items: center;
-    grid-template-columns: max-content 1fr;
+div.teams-members {
+  margin-top: 30px;
+  display: grid;
+  align-items: flex-end;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
 }
-section.facilities div.content{
-    position: relative;
-    padding: 10px 60px;
-    color:#fff;
+.member {
+  text-align: center;
 }
-section.facilities p{
-    margin: 20px 0;
-    font-size: .8rem;
+.member p {
+  font-size: 0.8rem;
+  color: #777;
 }
-section.facilities div.shadow-text{
-    z-index: 1;
-    color: rgba(255,255,255,.1);
-    top:-50px;
-    left:20px;
+.member img {
+  border-radius: 15px;
 }
-
-
-section.facilities{
-    background: linear-gradient(90deg, #C2B0E0 60%, #7DD7D8);
+.member h3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-section.facilities img{
-    border-top-right-radius: 120px;
-    border-bottom-right-radius: 120px;
-}
-section.facilities div.columns{
-    display: grid;
-    align-items: center;
-    grid-template-columns: max-content 1fr;
-}
-section.facilities div.content{
-    position: relative;
-    padding: 10px 60px;
-    color:#fff;
-}
-section.facilities p{
-    margin: 20px 0;
-    font-size: .8rem;
-}
-section.facilities div.shadow-text{
-    z-index: 1;
-    color: rgba(255,255,255,.1);
-    top:-50px;
-    left:20px;
-}
-@media screen and (max-width: 768px) {
-    section.facilities div.columns{
-        grid-template-columns: 1fr;
-        padding:20px;
-    }
-    section.facilities img{
-        border-radius: 120px;
-        box-sizing: border-box;
-        display: block;
-        width:100%;
-    }
-    section.facilities div.content{
-        padding: 20px 0;
-    }
-}
-
-
-
-section.team{
-    padding: 80px 0 40px;
-}
-section.team .shadow-text{
-    top:-50px;
-    left: -50px;
-}
-div.teams-members{
-    margin-top: 30px;
-    display: grid;
-    align-items:flex-end;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-}
-.member{
-    text-align: center;
-}
-.member p{
-    font-size: .8rem;
-    color: #777;
-}
-.member img{
-    border-radius: 15px;
-}
-.member h3{
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
 
 @media screen and (max-width: 768px) {
-    section.team{
-        padding: 60px 20px;
-    }
-    div.teams-members{
-        grid-template-columns:1fr;
-    }
+  section.team {
+    padding: 60px 20px;
+  }
+  div.teams-members {
+    grid-template-columns: 1fr;
+  }
+}
+
+section.trainer div.columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+section.trainer div.columns > div {
+  /*padding: 50px;*/
+}
+section.trainer .square {
+  position: absolute;
+  z-index: 1;
+  top: -50%;
+  left: -10%;
+  width: 64%;
+  height: 250%;
+  transform: rotate(20deg);
+  background: linear-gradient(270deg, #abb6e4, #efb6c5);
+}
+section.trainer .content {
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+  color: #fff;
+  display: grid;
+  grid-template-columns: 100%;
+  align-items: center;
+}
+section.trainer h2 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+section.trainer p {
+  text-transform: uppercase;
+}
+section.trainer a {
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+}
+section.trainer img {
+  display: block;
 }
