--- a/style..css
+++ b/style..css
@@ -661,3 +661,52 @@ section.trainer img {
     display: none;
   }
 }
+
+
+footer{
+    background-color: #2F2F2F;
+    color:#fff;
+    padding: 50px 0;
+}
+footer a{
+    color:#fff;
+}
+footer .columns{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    gap: 50px;
+}
+footer .links{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+}
+footer .links a{
+    display: block;
+    padding: 10px 0;
+    text-decoration: none;
+    font-size: .8rem;
+}
+footer h4{
+    margin-bottom: 20px;
+}
+footer a.logo{
+    text-decoration: none;
+    font-size:2rem;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 20px;
+    font-weight: 300;
+    line-height: 2rem;
+}
+footer a.logo span{
+    font-weight: bold;
+    display:block;
+    font-size:2.8rem;
+    text-align: center;
+    letter-spacing: 0px;
+}
+footer p{
+    margin: 14px 0;
+    font-size:.8rem;
+    color:rgba(255,255,255,0.6);
+}
